--- a/src/i18n/locales/en.json
+++ b/src/i18n/locales/en.json
@@ -1636,6 +1636,13 @@
           "excerpt": "",
           "content": "",
           "image": ""
+        },
+        "article5": {
+          "title": "Technical Documentation | The equipment is already ready for delivery and operation, so why is the operation and maintenance phase more painful?",
+          "date": "",
+          "excerpt": "",
+          "content": "",
+          "image": ""
         }
       }
     }
