--- a/src/i18n/locales/es.json
+++ b/src/i18n/locales/es.json
@@ -1634,6 +1634,13 @@
           "excerpt": "",
           "content": "",
           "image": ""
+        },
+        "article5": {
+          "title": "Documentación técnica | ¿Por qué la fase de operación y mantenimiento es más dolorosa cuando el equipo ya está listo para ser entregado y puesto en funcionamiento?",
+          "date": "",
+          "excerpt": "",
+          "content": "",
+          "image": ""
         }
       }
     }
