--- a/src/i18n/locales/it.json
+++ b/src/i18n/locales/it.json
@@ -1634,6 +1634,13 @@
           "excerpt": "",
           "content": "",
           "image": ""
+        },
+        "article5": {
+          "title": "Documentazione tecnica｜Il dispositivo è già pronto per essere consegnato e messo in funzione, perché la fase di manutenzione è più dolorosa?",
+          "date": "",
+          "excerpt": "",
+          "content": "",
+          "image": ""
         }
       }
     }
