--- a/src/i18n/locales/zh.json
+++ b/src/i18n/locales/zh.json
@@ -1637,6 +1637,13 @@
           "excerpt": "",
           "content": "",
           "image": ""
+        },
+        "article5": {
+          "title": "技术文档｜设备已经能交付运行，为什么运维阶段更痛苦？",
+          "date": "",
+          "excerpt": "",
+          "content": "",
+          "image": ""
         }
       }
     }
